# rust-code

./: Cargo.toml  LICENSE
.github/workflows/: release.yaml
src/: api.rs  config.rs  main.rs  messages.rs  permissions.rs  repl.rs  system_prompt.rs  tools.rs
