[package]
name = "claude-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Claude Code CLI"

[[bin]]
name = "claude-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
colored = "2"
rustyline = "14"
futures-util = "0.3"
glob = "0.3"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
